# latent-agents

./: .gitignore  CLAUDE.md  GPU_SETUP.md  README.md  example.py  pyproject.toml  run_gpu_benchmarks.py  run_quick_benchmark.py
latent_agents/: __init__.py  agent.py  model.py  pipeline.py  realigner.py  utils.py
tests/: conftest.py  test_benchmark.py  test_latent_agents.py  test_standard_benchmarks.py
